versioned_docs/version-2.7/getting-started/system-requirements.md
---
id: system-requirements
title: System Requirements
sidebar_label: System Requirements
---
This article covers the recommended system requirements for installing and using Beaver Builder on your sites.

## WordPress

Beaver Builder is compatible with WordPress 4.6 and above.  
**Note:** WordPress 4.9.6 requires Beaver Builder Version 2.1.1.3 or higher.

We recommend a [WP Memory limit](https://wordpress.org/support/article/editing-wp-config-php/#increasing-memory-allocated-to-php) of 128 MB or greater (256 MB or higher is preferred).

## Server

To ensure smooth functionality of the Beaver Builder user-interface (UI), it is important to configure the server with the following settings, as failure to do so may lead to issues:

* Set `X-Frame-Options` to `SAMEORIGIN`.
* Configure Content-Security-Policy (CSP) with the directive [`frame-ancestors`](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy/frame-ancestors) to `self`.

Contact your web host provider for assistance with configuring these settings.

## PHP

We follow WordPress minimum requirements for PHP version. See the [wordpress.org requirements page](https://wordpress.org/support/article/requirements/) for current recommendations.

* **All Beaver Builder products:**  
  * PHP 5.6.20 and above
  * PHP 7.4 is currently recommended by WordPress 
  * PHP 8 is supported for all Beaver Builder products with some warnings, which are fixed in Beaver Builder 2.5, Beaver Builder Theme 1.7.9, and Beaver Themer 1.4.
  
## jQuery

Beaver Builder enqueues the version of jQuery that is bundled with WordPress core and only supports that version. It is quite possible that other versions of jQuery will work, but use them at your own risk.

## Browsers

Beaver Builder supports all modern browsers (Chrome, FireFox, Safari and Edge).

### Viewing Beaver Builder content

To view content added by Beaver Builder to your pages, posts, or custom post types we support the latest three versions of Chrome, Firefox, Safari, and Edge. For example, if the latest version is 66, then any release of versions 64-66 is supported.

:::info
As of [WordPress 5.8](https://wordpress.org/news/2021/05/dropping-support-for-internet-explorer-11/), Internet Explorer 11 is no longer supported.
:::

### Working with the Beaver Builder editor

We only support the latest browser version when using the Beaver Builder editor.

## Mobile Devices

The Beaver Builder editor can be used on tablets and smartphones to edit layouts. Note the
functionality is still subject to limitations inherent on smaller screens.

